--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -134,10 +134,37 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Fig. \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 sample before treatment (solid curve) exhibits strong correlation around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are strong positive spurious trends against the extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations using only the extinction and z-band depth as input maps for regression; however, with the linear conservative I (dot-dashed blue curve) approach, a new trend appears against the r-band psfsize, which is indicative of the psfsize-related systematics in the LRG sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps identified as \textit{conservative II}, but still observe around $2\%$ residual density fluctuations in the low z-band depth region, which implies more complex systematic effects beyond what can be mitigated using the linear approach. Nonlinear model with three maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Fig. \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 sample before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against the extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only the extinction and z-band depth as input maps; however,  a new trend appears against the r-band psfsize with the linear conservative I approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in the LRG sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps identified as \textit{conservative II}, but we still observe around $2\%$ residual spurious fluctuations in the low end of the z-band depth, which implies nonlinear systematic effects exist. We find that the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. We experiment with different binning schemes but find consistent results.
 
 
-Fig. \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks vs DR9 sample before and after applying imaging weights. Linear weights with two maps reduce the chi-2 value from 679.8 (before) to 178.8. The p-value is indicative of remaining systematic effects. Adding psfsize-r does not help much with the p-value even though it reduces the chi-2 to 130. Using all maps with the linear model gives a more reasonable value however it leaves the analysis susceptible to over-fitting true clustering signal. With nonlinear approach two maps as input, the chi-2 is reasonable 74.3 with p-value XXX, and adding the stellar map does not change the p-value much, indicating the trend against stellar density can be explained with the extinction to a great extend. 
+Fig. \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DR9 sample before and after applying imaging weights are quoted for comparison. The \textit{linear conservative I} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the p-value enough (e.g., greater than $0.05$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$; however, regression with all imaging maps as input can lead to the removal of the true clustering signal. We try the \textit{nonlinear conservative II} approach. We obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Retraining the nonlinear approach while adding the stellar map yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$.  This indicates that the stellar density trend in the mean density of LRGs can be explained via the extinction map.
 
 
-\mr{TODO: move mitigation bias here and everything else from the mocks to Appendix}
+\subsection{Calibration of mitigation bias}
+The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are fed to the regression. Below we describe an approach to calibrate our cleaning methods and de-bias our $\fnl$ constraints. 
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{figures/fnlbias}
+\caption{True vs measured $\fnl$ values from the $\fnl=0$ and $76.9$ mocks with (dashed lines) and without systematics (solid lines). The lines represent the best fit estimates from fitting the mean power spectrum and the scatters show the best fit estimates from fitting individual spectra, only shown for the clean mocks for clarity.}\label{fig:fnlbias}
+\end{figure}
+
+We utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination models in the simulations are based on a linear multivariate model with the extinction, z-band depth, and r-band psfsize and are drawn from the sampled posterior constrained from fitting the DR9 sample. The idea is to simulate systematic effects that reflect realistic spurious fluctuations in the real data. For correction, the nonlinear model is trained and applied to the simulations with various sets of imaging maps as input, namely, we consider \textit{nonlinear conservative II}, \textit{nonlinear conservative II + nStar}, and \textit{nonlinear All Maps + nStar}. We fit the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks with mitigation applied are considered as the measured values. Fig. \ref{fig:fnlbias} shows the true $\fnl$ values and the measured $\fnl$ values from fitting the mean power spectrum (solid lines) and individual spectra (points). The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the contaminated mocks before cleaning (\textit{no weight}) or per realizations are not shown for visual clarity. 
+
+Then, a pair of linear coefficients are found to map the measured to the true values of $\fnl$, e.g., $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These coefficients for the mean power spectrum are summarized in Tab. \ref{tab:debiasparams}. The parameters for the \textit{All Maps+nStar} approach are the highest, as more mitigation bias is expected when more imaging maps are used. The value for $m_{1}-1$ determines the added uncertainty in the $\fnl$ inference due to mitigation, which is the highest for \textit{All Maps+nStar} and smallest for \textit{Conservative II}.
+
+\begin{table}
+\begin{center}
+\caption{Linear parameters employed to de-bias the $\fnl$ constraints to account for the over-correction issue.}\label{tab:debiasparams}
+\begin{tabular}{lcc}
+\hline
+\hline
+\textbf{Cleaning Method} & $m_{1}$ & $m_{2}$ \\
+\hline
+Nonlinear Conservative II & 1.17 & 13.95 \\
+Nonlinear Conservative II+nStar & 1.32 & 26.97 \\
+Nonlinear All Maps+nStar & 2.35 & 63.5\\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
