--- a/sections/data.tex
+++ b/sections/data.tex
@@ -12,8 +12,7 @@ Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 
 \end{figure}
 
 \begin{table*}
- \caption{Selection criteria for the DESI-like LRG targets \citep{zhou2022target}. Magnitudes are corrected for MW extinction. $z_{\rm fiber}$ represents the z-band fiber magnitude which corresponds to the expected flux within a DESI fiber.}
- \label{tab:ts}
+\caption{Selection criteria for the DESI-like LRG targets \citep{zhou2022target}. Magnitudes are corrected for MW extinction. $z_{\rm fiber}$ represents the z-band fiber magnitude which corresponds to the expected flux within a DESI fiber.} \label{tab:ts}
  \centerline{%
  \begin{tabular}{lll}
  \hline
@@ -31,8 +30,7 @@ Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 
  & $[(g-r >1.34)~{\rm AND}~((g-r) > -1.55*(r-W1) + 3.23)]~{\rm OR}~(r -W 1 > 1.8)$ & Remove low-z galaxies \\
  & $[(r-W1 > (W1 - 17.24)*1.83)~{\rm AND}~(r - W1 > W1 - 16.33)]~{\rm OR}~(r-W1 > 3.39)$ & Luminosity cut \\ 
  \hline
- \end{tabular}
- }
+ \end{tabular}}
 \end{table*}
 
 \begin{figure*}
@@ -69,8 +67,8 @@ For the nonlinear approximation, we employ the implementation of artificial neur
 
 Because of the inner correlation amongst the maps (see, e.g., Fig. \ref{fig:pcc} bottom panel), a few subsets of imaging maps are considered as input for more conservative treatment of systematic errors. These subsets are selected to minimize the cross-correlations between the cleaned LRG density field and imaging properties while avoiding highly correlated templates:
 \begin{itemize}
-\item \textbf{Conservative I}: Extinction, depth$_{z}$
-\item \textbf{Conservative II}: Extinction, depth$_{z}$, psfsize$_{r}$
+\item \textbf{Conservative I}: Extinction and z-band depth
+\item \textbf{Conservative II}: Extinction, z-band depth, and r-band psfsize
 \item \textbf{All Maps}: Extinction, depth in $grz$ and $W1$, psfsize in $grz$
 \end{itemize}
 
