--- a/sections/data.tex
+++ b/sections/data.tex
@@ -56,7 +56,7 @@ Fig. \ref{fig:ng} (bottom) illustrates the imaging templates investigated as pot
 
 
 
-Fig. \ref{fig:pcc} shows the Pearson correlation coefficient between the DR9 LRG density and DESI imaging properties for the three imaging surveys (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves are constructed from lognormal simulations (see, subsection \ref{ssec:mocks}) to quantify the significance of correlations. Fig. \ref{fig:pcc} (bottom) shows the correlation matrix among imaging properties for the DESI footprint. There is a strong correlation between the LRG density and depth maps, and next correlated properties seem to be Galactic foregrounds. There is a small correlation between the LRG density and the W1 depth and psfsize properties. We observe a significant inner correlation among the imaging properties themselves, especially between the local stellar density and Milky Way extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band. We also investigate the correlations using the Spearman-r correlation, but find no significant differences.
+Fig. \ref{fig:pcc} shows the Pearson correlation coefficient between the DR9 LRG density and DESI imaging properties for the three imaging surveys (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves are constructed from lognormal simulations (see, subsection \ref{ssec:mocks}) to quantify the significance of correlations. Fig. \ref{fig:pcc} (bottom) shows the correlation matrix among imaging properties for the DESI footprint. There is a strong correlation between the LRG density and depth maps, and next correlated properties seem to be Galactic foregrounds. There is a small correlation between the LRG density and the $W1$-band depth and psfsize properties. We observe a significant inner correlation among the imaging properties themselves, especially between the local stellar density and Milky Way extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band. We also investigate the correlations using the Spearman-r correlation, but find no significant differences.
 
 \subsubsection{Imaging weights}
 We follow a regression approach to model the spatial dependence of spurious fluctuations in the DR9 density map to the information encoded by the imaging templates. Both linear multivariate and nonlinear regression are applied to assess the level of nonlinear systematic effects. 
@@ -69,7 +69,7 @@ Because of the inner correlation amongst the maps (see, e.g., Fig. \ref{fig:pcc}
 \begin{itemize}
 \item \textbf{Conservative I}: Extinction and z-band depth
 \item \textbf{Conservative II}: Extinction, z-band depth, and r-band psfsize
-\item \textbf{All Maps}: Extinction, depth in $grz$ and $W1$, psfsize in $grz$
+\item \textbf{All Maps}: Extinction, depth in $grzW1$, and psfsize in $grz$
 \end{itemize}
 
 Upon inspecting the predicted density maps, we find that while most of the large-scale spurious fluctuations are explained by just the extinction map and depth in the z band, adding the r-band psfsize results in a finer structure in the predicted density map, and as we show later it reduces the cross-correlation between the LRG density and the z band psfsize. We observe that using all imaging maps as input features for regression does not add more information, as expected due to the strong correlations between different bands. Comparing the weights from the linear model to that of the nonlinear approach for the same input maps, we find that the nonlinear approach yields finer structures due to higher flexibility. Overall consistent with the LRG data, both models predict higher galaxy density near the boundaries where the DESI imaging surveys observed the high extinction regions of the Milky Way. These over-dense regions are likely contaminated artifacts entering the LRG selection, e.g., stellar contaminants or other artifacts because of obscured photometry by MW extinction. The assessment of these imaging weights is further analyzed in \ref{ssec:characterization}. We also investigate the use of all imaging maps as a case which is highly prone to over-subtracting the true clustering signal. Additionally, we assess the robustness of our results against remaining systematic errors by adding external templates for the neutral hydrogen column density \citep{2016A&A...594A.116H} and the photometric calibration (e.g., in the z band; \textit{CALIBZ}). The effects on $\fnl$ constraints are discussed in Section \ref{sec:results}.
