--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -146,7 +146,7 @@ The template-based mitigation of imaging systematics removes some of the true cl
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{figures/fnlbias}
-\caption{True vs measured $\fnl$ values from the $\fnl=0$ and $76.9$ mocks with (dashed lines) and without systematics (solid lines). The lines represent the best fit estimates from fitting the mean power spectrum and the scatters show the best fit estimates from fitting individual spectra, only shown for the clean mocks for clarity.}\label{fig:fnlbias}
+\caption{True vs measured $\fnl$ values from the $\fnl=0$ and $76.9$ mocks. The solid (dashed) lines represent the best fit estimates from fitting the mean power spectrum of the clean (contaminated) mocks. The scatter points show the best fit estimates from fitting the individual spectra for the clean mocks.}\label{fig:fnlbias}
 \end{figure}
 
 We utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination models in the simulations are based on a linear multivariate model with the extinction, z-band depth, and r-band psfsize and are drawn from the sampled posterior constrained from fitting the DR9 sample. The idea is to simulate systematic effects that reflect realistic spurious fluctuations in the real data. For correction, the nonlinear model is trained and applied to the simulations with various sets of imaging maps as input, namely, we consider \textit{nonlinear conservative II}, \textit{nonlinear conservative II + nStar}, and \textit{nonlinear All Maps + nStar}. We fit the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks with mitigation applied are considered as the measured values. Fig. \ref{fig:fnlbias} shows the true $\fnl$ values and the measured $\fnl$ values from fitting the mean power spectrum (solid lines) and individual spectra (points). The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the contaminated mocks before cleaning (\textit{no weight}) or per realizations are not shown for visual clarity. 
