--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,14 +1,12 @@
 \section{Results}\label{sec:results}
-This sections presents the constraint on $\fnl$ from the DR9 LRG sample. The robustness of constraints are tested against various assumptions and details in survey mask, imaging weights, and calibration of data. The default analysis uses the covariance from $\fnl=0$ mocks. We also validate the modeling pipeline and characterize the amount of mitigation bias introduced in $\fnl$ after cleaning for systematics. 
-
 \subsection{DESI imaging LRG sample}
 
-Fig. \ref{fig:cl_dr9} shows the measured power spectrum of the DESI imaging DR9 LRG sample with different imaging weights applied, the best fit theory predictions, and the mean and 1$\sigma$ error on angular power spectrum measured from the $\fnl=0$ lognormal simulations. Power spectra are similar with differences less than ??\% for small scales ($\ell > 2$), and as we go to larger scales, the differences become more significant. There is a little difference between linear cons II and linear all maps. This proves that our feature selection procedure has worked to identify the important maps. Comparing linear cons I to linear cons II, modes with $6\leq \ell < 10$ are different, indicating scales where psfsize-r is affecting the signal. Comparing nonlinear cons II to linear cons II, modes at the second bin ($4 \leq \ell < 6$) are very different, indicating the nonlinear approach is more flexible to reduce fluctuations on small scales as well large scales. 
+Fig. \ref{fig:cl_dr9} shows the measured power spectrum of the DESI imaging DR9 LRG sample before and after applying imaging weights, the best fit theory curves, and the mean power spectrum and 1$\sigma$ error estimated from the $\fnl=0$ lognormal simulations. The power spectra are similar on small scales ($\ell > 20$), but the differences between various cleaning methods are significant on large scales. By comparing \textit{linear conservative I} to \textit{linear conservative II}, we find that the measure power spectra on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the r-band psfsize template in \textit{linear conservative II}. On other scales, the differences between the spectra after the linear-based cleaning are negligible, supporting the idea that our feature selection procedure has worked to identify the primary maps causing excess clustering signal. Comparing \textit{nonlinear conservative II} to \textit{linear conservative II}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably pointing at nonlinear spurious fluctuations with large-scale characteristics due to the extinction. Adding stellar density to the nonlinear approach (\textit{nonlinear conservative II + nStar}) results in less excess power relative to the mock power spectrym, with the modes on $2\leq \ell < 4$ reflecting the biggest change. The flexibility of the nonlinear approach to correct for these effects ameliorates the clustering measurements on these scales.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.48\textwidth]{figures/model_dr9.pdf} 
-    \caption{Measured power spectrum of the DR9 LRG sample before and after correcting for systematics with their corresponding best fit theory predictions. The shade represents $1\sigma$ error constructed from the $\fnl=0$ mocks.}
+    \caption{The angular power spectrum of the DR9 LRG sample before (\textit{No weight}) and after correcting for imaging systematics using various methods with their corresponding best fit theory curves. The shade represents $1\sigma$ error constructed from the $\fnl=0$ mocks.}
     \label{fig:cl_dr9}
 \end{figure}
 
@@ -18,7 +16,7 @@ Fig. \ref{fig:cl_dr9} shows the measured power spectrum of the DESI imaging DR9 
     \raggedleft
     \includegraphics[width=0.424\textwidth]{mcmc_dr9methods1d.pdf}
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods.pdf} 
-    \caption{Calibrated constrains from the DR9 LRG sample. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: probability contours for the bias from the DR9 LRG sample before and after applying nonlinear cleaning methods. The dark and light 2D contours represent $68\%$ and $95\%$ confidence intervals, respectively.}\label{fig:mcmc_dr9}
+    \caption{Calibrated constrains from the DR9 LRG sample. \textit{Top}: probability distribution for $\fnl$ marginalized over the shotnoise and bias. \textit{Bottom}: $68\%$ and $95\%$ probability distribution contours for the bias and $\fnl$ from the DR9 LRG sample before and after applying nonlinear cleaning methods. The lognormal mocks are used to correct these distributions for mitigation bias.}\label{fig:mcmc_dr9}
 \end{figure}
 
 \begin{table*}
@@ -42,7 +40,9 @@ DESI                      & Nonlin. (All Maps+nStar)& $ 49.69$& $ 41.91$& $ 13.1
 \end{table*}
 
 
-Tab. \ref{tab:dr9methodcalib} summarizes the best fit and marginalized mean estimates of $\fnl$ from fitting power spectrum of the DR9 LRG sample using the nonlinear approach with various combinations of imaging templates. All constraints are accounted for the mitigation bias using the lognormal mocks, which is further discussed in \S \ref{ssec:contmocks}. With the corrections applied, we obtain $36.07 (25.03) < \fnl < 61.44(75.64)$ for nonlinear (conservative II), $36.88(24.87) < \fnl < 63.31(77.78)$ for nonlinear (conservative II + nStar), and $13.09(-15.95) < \fnl < 69.14(91.84)$ for nonlinear (all maps + nStar) at $68\% (95\%)$ confidence. Fig \ref{fig:mcmc_dr9} shows the 2D constraints with $68\%$ and $95\%$ confidence on $\fnl$ and $b$ for the DESI footprint from the DR9 sample before (no weight) and after applying different cleaning schemes. No weight constraint at $68\%$ is $98.14<\fnl<132.89$ with a best fit of $113.18$ and marginalized mean of $115.49$, and is more than $2\sigma$ off from zero. Applying imaging weights shifts constraints to lower $\fnl$ values, and $b$ is slightly pulled upward since excess clustering due to systematics is removed. Using all maps with the linear model does not change the results, showing that three maps are sufficient at the linear level to mitigate systematics.  As an alternative, using a nonlinear model with three maps shows around $1\sigma$ shift, with $68\%$ confidence at $18.91<\fnl<40.59$, inconsistent with zero for more than $2\sigma$. Adding a template for the local stellar density shift constraints by $1\sigma$, making it consistent with zero. As the most rigorous approach, using all maps and stellar density included results in more than $2\sigma$ shift. We emphasize that these shifts to lower $\fnl$ are somewhat expected as more input maps results in regressing more modes from cosmological clustering signal. Therefore, we use lognormal mocks to calibrate the amount of signal that is removed in each case and attempt to undo the effect.
+Tab. \ref{tab:dr9methodcalib} describes the best fit and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DR9 LRG sample before and after cleaning with the nonlinear approach given various combinations of imaging templates. All constraints are calibrated for the effect of mitigation bias using the lognormal simulations. With the corrections applied, we obtain $36.08 (25.03) < \fnl < 61.44(75.64)$ with $\chi^{2}=34.6$ for \textit{nonlinear conservative II}, $36.88(24.87) < \fnl < 63.31(77.78)$ with $\chi^{2}=35.2$ for \textit{nonlinear conservative II + nStar}, and $13.10(-15.96) < \fnl < 69.14(91.84)$ with $\chi^{2}=39.5$ for \textit{nonlinear all maps + nStar} at $68\% (95\%)$ confidence over 34 degrees of freedom. \mr{here}
+
+Fig \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ (top) and the $68\%$ and $95\%$ probability contours for the bias parameter and $\fnl$ from the DR9 sample before (\textit{no weight}) and after applying different cleaning schemes. No weight constraint at $68\%$ is $98.14<\fnl<132.89$ with a best fit of $113.18$ and marginalized mean of $115.49$, and is more than $2\sigma$ off from zero. Applying imaging weights shifts constraints to lower $\fnl$ values, and $b$ is slightly pulled upward since excess clustering due to systematics is removed. Using all maps with the linear model does not change the results, showing that three maps are sufficient at the linear level to mitigate systematics.  As an alternative, using a nonlinear model with three maps shows around $1\sigma$ shift, with $68\%$ confidence at $18.91<\fnl<40.59$, inconsistent with zero for more than $2\sigma$. Adding a template for the local stellar density shift constraints by $1\sigma$, making it consistent with zero. As the most rigorous approach, using all maps and stellar density included results in more than $2\sigma$ shift. We emphasize that these shifts to lower $\fnl$ are somewhat expected as more input maps results in regressing more modes from cosmological clustering signal. Therefore, we use lognormal mocks to calibrate the amount of signal that is removed in each case and attempt to undo the effect.
 
 
 
